# rust-web-backend-sample-stack

./: Cargo.toml  README.md  Rocket.toml
migrations/2020-06-28-181357_create_words/: down.sql  up.sql
public/: index.html
src/: lib.rs  main.rs  models.rs  schema.rs
static/: index.html
